[tool.poetry]
name = "syntool"
version = "0.9.0"
description = "Chemical synthesis planning tool"
authors = ["Laboratoire de Chemoinformatique <tagirshin@gmail.com>"]
license = "MIT"
readme = "README.rst"
packages = [{ include = "SynTool", from = "." }, ]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
CGRtools = "^4.1.35"
py-mini-racer = ">=0.6"
pandas = ">=1.4"
toytree = ">=2.0"
ray = ">=2.0"
click = ">=8.0.0"
StructureFingerprint = "^2.1"
werkzeug = ">2.0"
gdown = "4.7.1"
ordered-set = "4.1.0"
numpy = ">=1.26"
chytorch = "^1.60"
chytorch-rxnmap = "^1.4"

[tool.poetry.group.gpu]
optional = true

[tool.poetry.group.gpu.dependencies]
adabelief-pytorch = ">=0.2.1"
torch-geometric = "2.4.0"
pytorch-lightning = ">=1.9,<2"
torch-scatter = [{markers = "sys_platform == 'linux'", url="https://data.pyg.org/whl/torch-2.1.0%2Bcu121/torch_scatter-2.1.2+pt21cu121-cp310-cp310-linux_x86_64.whl"}]
torch-sparse = [{markers = "sys_platform == 'linux'", url="https://data.pyg.org/whl/torch-2.1.0%2Bcu121/torch_sparse-0.6.18+pt21cu121-cp310-cp310-linux_x86_64.whl"}]
torch-spline-conv = [{markers = "sys_platform == 'linux'", url="https://data.pyg.org/whl/torch-2.1.0%2Bcu121/torch_spline_conv-1.2.2+pt21cu121-cp310-cp310-linux_x86_64.whl"}]
torch-cluster = [{markers = "sys_platform == 'linux'", url="https://data.pyg.org/whl/torch-2.1.0%2Bcu121/torch_cluster-1.6.3+pt21cu121-cp310-cp310-linux_x86_64.whl"}]
pyg-lib = [{markers = "sys_platform == 'linux'", url="https://data.pyg.org/whl/torch-2.1.0%2Bcu121/pyg_lib-0.3.0+pt21cu121-cp310-cp310-linux_x86_64.whl"}]

[tool.poetry.scripts]
syntool_planning_data = "SynTool.interfaces.cli:download_planning_data_cli"
syntool_training_data = "SynTool.interfaces.cli:download_training_data_cli"
syntool_planning = "SynTool.interfaces.cli:syntool_planning_cli"
syntool_training = "SynTool.interfaces.cli:syntool_training_cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
